--- a/src/main.scss
+++ b/src/main.scss
@@ -1,1 +1,5 @@
-@use "./sass/app.scss"
+@use "./sass/app.scss";
+@use "./sass/hearder.scss";
+@use "./sass/footer.scss";
+@use "./sass/card.scss";
+@use "./sass/error404.scss";
