--- a/src/sass/banner.scss
+++ b/src/sass/banner.scss
@@ -11,6 +11,12 @@
         height: auto;
         border-radius: 20px;
         filter: brightness(0.5);
+
+        @media (max-width : 425px) {
+            height: 150px;
+            border-radius: 15px;
+
+        }
     }   
 
     h1{
@@ -18,6 +24,21 @@
         font-size: 40px;
         color: white;
         position: absolute;
-        
+
+        @media (max-width : 425px) {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            font-size: 30px;
+            padding-left: 15px;
+        }
+            
+    }
+
+    @media (max-width : 425px) {
+        margin: 27px 20px 22px 20px;
+        height: 160px;
+        border-radius: 10px;
+        padding: 0%;
     }
 }
