--- a/src/sass/card.scss
+++ b/src/sass/card.scss
@@ -13,6 +13,12 @@
         height: 100%;
         object-fit: cover;
         border-radius: 10px;
+
+        @media (max-width : 768px) {
+
+        }
+        @media (max-width : 425px) {
+        }
     }
 
     h2{
