--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -1,11 +1,30 @@
 .gallery {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    row-gap: 45px;
-    column-gap: 55px;
-    padding: 3rem;
-    background: rgb(241, 235, 235);
-    border-radius: 15px;
-    margin: 5rem;
-    justify-items: center;
+    grid-auto-rows: 340px;
+    background-color: rgb(241, 237, 237);
+    border-radius: 25px;
+    margin: 0px 100px 50px 100px;
+    gap: 50px;
+    padding: 56px 50px 43px 50px;
+
+    
+
+    @media (max-width : 425px) {
+        grid-template-columns: 1fr;
+        grid-auto-rows: 255px;
+        margin: 5px;
+        background-color: white;
+        gap: 20px;
+        padding: 0 20px 27px 20px;
+    }
+
+    @media (max-width : 1024px){
+        grid-template-columns: 1fr 1fr;
+    }
+
+    @media (max-width : 768px){
+        grid-template-columns: 1fr;
+    }
+
 }
