--- a/src/sass/card.scss
+++ b/src/sass/card.scss
@@ -8,6 +8,10 @@
     height: 300px;
     position: relative;
 
+    @media (max-width : 425px) {
+        width: 100%;
+    }
+
     img {
         width: 100%;
         height: 100%;
