--- a/src/sass/error404.scss
+++ b/src/sass/error404.scss
@@ -9,6 +9,7 @@
     
         @media (max-width : 425px){
             gap: 113px;
+            margin-top: 100px ;
         }
     
         h2 {
@@ -31,6 +32,8 @@
     
             @media (max-width : 425px){
                 font-size: 18px;
+                display: flex;
+                flex-direction: column;
             }
         }
     
