--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -6,8 +6,22 @@
     justify-content: center;
     align-items: center;
     padding: 55px 0 0 0;
-    
+
+    @media (max-width : 425px) {
+        padding-bottom: 45px;
+        margin: 0;
+    }
+
     img {
         width: 100px;
+    }
+}
+
+@media (max-width : 425px) {
+    p {
+        display: flex;
+        flex-direction: column;
+        font-size: 13px;
+        align-items: center;
     }
 }
