--- a/src/sass/hearder.scss
+++ b/src/sass/hearder.scss
@@ -7,9 +7,21 @@
     padding:0 5rem;
     margin-top: 50px;
 
+    @media (max-width : 425px) {
+        padding: 0 1rem;
+        margin-top: 20px;
+    }
+
     ul { 
         display: flex;
         gap: 2rem;
+
+        @media (max-width : 425px) {    
+                text-transform: uppercase;
+                font-size: 12px;
+                font-weight: bold;
+            }
+
         a {
             text-decoration: none;
             color: #000;
@@ -19,6 +31,18 @@
         }
         li {
             list-style: none;
+        }
+    }
+
+    @media (max-width : 425px) {    
+        img{
+            height: 44px;
+        }
+    }
+
+    @media (max-width : 360px) {
+        img{
+            height: 39px;
         }
     }
 }
