--- a/src/sass/logements.scss
+++ b/src/sass/logements.scss
@@ -16,7 +16,7 @@
 
 
 .all-info-container {
-    margin: 30px 100px 50px 100px;
+    margin: 15px 100px 35px 100px;
    
         display: flex;
         flex-direction: row; 
@@ -60,6 +60,7 @@
                 font-weight: 500;
 
                 @media (max-width: 425px) {
+                    align-items: flex-start;
                     font-size: 14px;
                 }
             }
@@ -111,7 +112,11 @@
     }
 }
 
-    .star-container {
+    .rating-container {
+
+        display: flex; 
+        justify-content: flex-end;
+        margin-top: 35px;
 
         @media (max-width : 768px) {
             position: absolute;
@@ -120,6 +125,9 @@
         @media (max-width : 425px) {
             position: absolute;
             padding-top: 12px;
+            img{
+                height: 25px;
+            }
         }
     }
  
@@ -149,3 +157,10 @@
         list-style-type: none;
     }
 }
+
+.tag-container{
+    display: flex;
+    gap : 15px;
+    margin-bottom: -10px;
+    margin-top: 0;
+    }
