--- a/src/sass/about.scss
+++ b/src/sass/about.scss
@@ -1,13 +1,28 @@
 .aboutMenu {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     align-content: center;
+    padding-bottom: 45px;
+
+    @media (max-width: 425px) {
+      padding-bottom: 25px;
+    }
+}
+
+.banner {
+  padding-bottom: 3rem;
+  padding-top: 2rem;
+
+  @media (max-width: 425px) {
+    padding-bottom: 1rem;
+}
 }
 
 .aboutText {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 20px;
     width: 80%;
 }
   
