--- a/src/sass/logements.scss
+++ b/src/sass/logements.scss
@@ -2,6 +2,8 @@
 
     margin-left: 100px;
     margin-right: 100px;
+    margin-top: 25px;
+
 
     @media (max-width : 768px) {
         margin: 15px 20px 13px 20px;
@@ -70,6 +72,12 @@
     .right-container {
         display: flex;
         flex-direction: column; 
+        padding-top: 27px;
+
+        @media (max-width: 425px) {
+            padding-top: 0px;
+
+        }
 
     .host-container {
         display: flex; 
