--- a/src/sass/banner.scss
+++ b/src/sass/banner.scss
@@ -12,10 +12,13 @@
         border-radius: 20px;
         filter: brightness(0.5);
 
+        @media (max-width : 768px) {
+            height: 150px;
+        }
+
         @media (max-width : 425px) {
             height: 145px;
             border-radius: 15px;
-
         }
     }   
 
@@ -24,6 +27,10 @@
         font-size: 40px;
         color: white;
         position: absolute;
+
+        @media (max-width : 768px) {
+            font-size: 30px;
+        }
 
         @media (max-width : 425px) {
             display: flex;
