--- a/src/sass/hearder.scss
+++ b/src/sass/hearder.scss
@@ -7,6 +7,11 @@
     padding:0 5rem;
     margin-top: 50px;
 
+
+    @media (max-width : 768px) {
+        padding: 0 2rem;
+    }
+
     @media (max-width : 425px) {
         padding: 0 1rem;
         margin-top: 20px;
@@ -34,6 +39,11 @@
         }
     }
 
+
+    @media (max-width : 768px) {
+        img{height: 44px;
+        }
+        }
     @media (max-width : 425px) {    
         img{
             height: 44px;
