--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,8 +1,8 @@
 .app-text {
-    color: blue
+  color: blue;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
+  font-family: "Poppins", sans-serif;
+  margin: 0;
 }
