--- a/src/sass/banner.scss
+++ b/src/sass/banner.scss
@@ -1,51 +1,50 @@
 .banner {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 5rem;
-    position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5rem;
+  position: relative;
 
-    .banner-img {
-        width: 100%;
-        height: auto;
-        border-radius: 20px;
-        filter: brightness(0.5);
+  .banner-img {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+    filter: brightness(0.5);
 
-        @media (max-width : 768px) {
-            height: 150px;
-        }
-
-        @media (max-width : 425px) {
-            height: 145px;
-            border-radius: 15px;
-        }
-    }   
-
-    h1{
-        font-family: 'Poppins', sans-serif;
-        font-size: 40px;
-        color: white;
-        position: absolute;
-
-        @media (max-width : 768px) {
-            font-size: 30px;
-        }
-
-        @media (max-width : 425px) {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            font-size: 30px;
-            padding-left: 15px;
-        }
-            
+    @media (max-width: 768px) {
+      height: 150px;
     }
 
-    @media (max-width : 425px) {
-        margin: 27px 20px 22px 20px;
-        height: 160px;
-        border-radius: 10px;
-        padding: 0%;
+    @media (max-width: 425px) {
+      height: 145px;
+      border-radius: 15px;
     }
+  }
+
+  h1 {
+    font-family: "Poppins", sans-serif;
+    font-size: 40px;
+    color: white;
+    position: absolute;
+
+    @media (max-width: 768px) {
+      font-size: 30px;
+    }
+
+    @media (max-width: 425px) {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      font-size: 30px;
+      padding-left: 15px;
+    }
+  }
+
+  @media (max-width: 425px) {
+    margin: 27px 20px 22px 20px;
+    height: 160px;
+    border-radius: 10px;
+    padding: 0%;
+  }
 }
