--- a/src/sass/card.scss
+++ b/src/sass/card.scss
@@ -1,35 +1,34 @@
 .card {
-    background-color: #fff;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  position: relative;
+
+  @media (max-width: 425px) {
+    width: 100%;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-    position: relative;
 
-    @media (max-width : 425px) {
-        width: 100%;
+    @media (max-width: 768px) {
     }
-
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 10px;
-
-        @media (max-width : 768px) {
-
-        }
-        @media (max-width : 425px) {
-        }
+    @media (max-width: 425px) {
     }
+  }
 
-    h2{
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        color: white;
-        padding: 5px;
-        font-family: 'Poppins', sans-serif;
-        }
+  h2 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    color: white;
+    padding: 5px;
+    font-family: "Poppins", sans-serif;
+  }
 }
